# movies

./: .env-template  .env.template  .gitignore  .pre-commit-config-1.yaml  .pre-commit-config.yaml  Dockerfile  Makefile  Makefile0  README.md  arch.puml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test-0.yml  docker-compose.test.dev.yml  docker-compose.test.yml  docker-compose.yml  local-compose.yml  main.py  pyproject.toml  setup.cfg
.envs/development/: .env.template
.envs/production/: .env.template
.github/workflows/: flake8.yml  lint.yml  tests-with-docker.yml
adminpanel/.envs/.prod/: .env.django
adminpanel/config/: __init__.py  urls.py
adminpanel/config/settings/components/: __init__.py  base.py  database.py  drf.py
adminpanel/config/settings/environments/: development.py  production.py
adminpanel/docker/app/: Dockerfile
adminpanel/docker/app/scripts/: createsuperuser.py  entrypoint.sh  start.sh
adminpanel/docker/development/app/: Dockerfile
adminpanel/docker/development/django/: Dockerfile
adminpanel/docker/development/postgres/: Dockerfile
adminpanel/docker/local/django/: Dockerfile  entrypoint.sh
adminpanel/docker/postgres/: Dockerfile
adminpanel/docker/production/postgres/: Dockerfile
adminpanel/movies/: models.py
adminpanel/movies/api/v1/: serializer.py  urls.py  views.py
adminpanel/src/movies/: admin.py  models.py
adminpanel/src/movies/migrations/: 0001_initial.py
adminpanel/src/nginx/: site.conf
docker/adminpanel/: Dockerfile
docker/adminpanel/nginx/: Dockerfile
docker/adminpanel/scripts/: entrypoint.sh  start.sh  wait-dependencies.sh
docker/content/: Dockerfile
docker/content/nginx/: nginx.conf
docker/content/nginx/templates/: site.conf.template
docker/content/scripts/: entrypoint.sh  start.sh  wait-dependencies.sh
docker/elasticsearch/: Dockerfile
docker/es/: Dockerfile
docker/postgres/: Dockerfile
docker/redis/: Dockerfile
docker/tests/: Dockerfile  Dockerfile-0
docker/tests/scripts/: start.sh  wait-dependencies.sh
etl/files/es_indexes_schemas/: movies.json
etl/src/: config.py  const.py  decorators.py  helpers.py  pg_to_es.py  processor.py  sqlite_to_pg.py  state.py
etl/src/clients/: es.py  interface.py  pg.py  sqlite.py
etl/src/extractors/: interface.py  pg.py  sqlite.py
etl/src/loaders/: es.py  interface.py  pg.py
etl/src/models/: es.py
etl/src/processes/: interface.py  processes.py
etl/src/transformers/: interface.py  pg.py
etl/src/transformers/es/: genre.py  movie.py  person.py
scripts/: colors.sh  helpers.sh  logger.sh  run_command_with_logs.sh  utils.sh
search/docker/app/: Dockerfile
search/docker/app/scripts/: entrypoint.sh  start.sh  wait-dependencies.sh
search/docker/es/: Dockerfile
search/docker/redis/: Dockerfile
search/docker/tests/: Dockerfile
search/src/: main.py
search/src/api/: params.py
search/src/core/: config.py
search/src/db/: cache.py  db.py  interface.py  shared.py
search/src/models/: film.py  genre.py  mixins.py  person.py
search/src/services/: base.py  film.py  genre.py  person.py
src/: main.py
src/adminpanel/config/: urls.py  wsgi.py
src/adminpanel/management_commands/: apps.py
src/adminpanel/movies/: admin.py  apps.py  models.py
src/content/: main.py  pagination.py  utils.py
src/content/api/: utils.py
src/content/app/: __init__.py  event_handlers.py  exception_handler.py
src/content/core/: config.py  logger.py
src/content/db/: constants.py  interfaces.py  types.py
src/content/models/: film.py  genre.py  mixins.py  person.py
src/content/services/: base.py  film.py  genre.py  person.py  utils.py
src/etl/: base.py  celery.py  helpers.py  periodic_tasks.py  pg_to_es.py  processes.py  sqlite_to_pg.py  state.py  utils.py
src/etl/config/: settings.py
src/etl/db_clients/: base.py  context_managers.py  es.py  pg.py  sqlite.py
src/etl/extractors/: base.py  pg.py  sqlite.py
src/etl/loaders/: base.py  es.py  pg.py
src/etl/models/: pg.py
src/etl/transformers/: base.py  pg.py
src/scripts/: format.sh  init.sh  lint.sh
temp/: Dockerfile  Makefile0  delete.txt  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test-9.yml  docker-compose.test.dev.yml  docker-compose.test.yml  docker-compose.yml  main.py
tests/: conftest.py
tests/functional/: constants.py  utils.py
tests/functional/testdata/: data_generators.py  fakers.py
(+78 files in other folders)
