[tool.poetry]
name = "Movies"
version = "0.1.0"
description = "Online cinema"
authors = ["Denis <dfgaraev@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
psycopg2 = "^2.9.3"
python-dotenv = "^0.20.0"
django-split-settings = "^1.1.0"
django-debug-toolbar = "^3.6.0"
gunicorn = "^20.1.0"
djangorestframework = "^3.13.1"
pydantic = "^1.9.2"
python-decouple = "^3.6"
loguru = "^0.6.0"
django-filter = "^22.1"
elasticsearch = {version = "7.9.1", extras = ["async"]}
fastapi = "^0.82.0"
orjson = "^3.8.0"
aioredis = "^2.0.1"
uvicorn = "^0.18.3"
fastapi-pagination = "^0.10.0"

[tool.poetry.group.lint.dependencies]
flake8 = "^5.0.4"
flake8-broken-line = "^0.5.0"
flake8-quotes = "^3.3.1"
pep8-naming = "^0.13.2"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"

[tool.black]
line-length = 110

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
