[tool.poetry]
name = "Movies"
version = "0.1.0"
description = "Online cinema"
authors = ["Denis <dfgaraev@yandex.ru>"]
readme = "README.md"
packages = [
    {include = "adminpanel", from = "src"},
    {include = "etl", from = "src"},
    {include = "content", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.11"
backoff = "^2.2.1"

[tool.poetry.group.adminpanel.dependencies]
Django = "^4.1"
python-dotenv = "^1.0.0"
django-split-settings = "^1.1.0"
django-debug-toolbar = "^4.0.0"
gunicorn = "^20.1.0"
djangorestframework = "^3.13.1"
python-decouple = "^3.6"
loguru = "^0.7.0"
django-filter = "^23.2"
elasticsearch = {version = "8.7.0", extras = ["async"]}
orjson = "^3.8.0"
uvicorn = "^0.22.0"
pydantic = "^1.10.2"
psycopg2-binary = "^2.9.6"

[tool.poetry.group.content.dependencies]
fastapi = "^0.95.1"
redis = "^4.5.5"

[tool.poetry.group.lint.dependencies]
flake8 = "^6.0.0"
flake8-quotes = "^3.3.1"
pep8-naming = "^0.13.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.10.1"
pre-commit = "^3.3.1"


[tool.poetry.group.tests.dependencies]
pytest = "7.1.2"
pytest-asyncio = "0.12.0"
Faker = "^18.7.0"


[tool.poetry.group.etl.dependencies]
celery = {extras = ["redis"], version = "^5.2.7"}

[tool.black]
line-length = 110

[tool.pytest.ini_options]
pythonpath = ["search/src", "app"]
addopts = "-v -p no:warnings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
