[tool.poetry]
name = "Movies"
version = "0.1.0"
description = "Online cinema"
authors = ["Denis <dfgaraev@yandex.ru>"]
readme = "README.md"
packages = [
    {include = "adminpanel", from = "src"},
    {include = "etl", from = "src"},
    {include = "content", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.2"
python-dotenv = "^1.0.0"
python-decouple = "^3.6"
backoff = "^2.2.1"
loguru = "^0.7.0"
uvicorn = "^0.22.0"

[tool.poetry.group.adminpanel.dependencies]
Django = "^4.1"
djangorestframework = "^3.13.1"
django-split-settings = "^1.1.0"
django-debug-toolbar = "^4.0.0"
django-filter = "^23.2"
psycopg2-binary = "^2.9.6"
gunicorn = "^20.1.0"

[tool.poetry.group.content.dependencies]
fastapi = "^0.95.1"
redis = "^4.5.5"
elasticsearch = {version = "8.7.0", extras = ["async"]}
orjson = "^3.8.0"

[tool.poetry.group.lint.dependencies]
flake8 = "^6.0.0"
flake8-quotes = "^3.3.1"
flake8-comprehensions = "^3.12.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
pep8-naming = "^0.13.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.10.1"
pre-commit = "^3.3.1"
autoflake = "^2.1.1"


[tool.poetry.group.tests.dependencies]
Faker = "^18.7.0"
httpx = "^0.24.1"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"


[tool.poetry.group.etl.dependencies]
celery = {extras = ["redis"], version = "^5.2.7"}

[tool.black]
line-length = 110

[tool.isort]
line_length = 110
multi_line_output = 3
default_section = "THIRDPARTY"
skip = "venv/"
skip_glob = "**/migrations/*.py"
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.pytest.ini_options]
#addopts = ["-v", "-rP", "-p", "no:warnings", "--import-mode=importlib",]
addopts = ["-v", "-p", "no:warnings", "--import-mode=importlib",]
asyncio_mode = "auto"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
